--- a/_posters/20150714-inmm.md
+++ b/_posters/20150714-inmm.md
@@ -10,4 +10,4 @@ location: "Indian Wells, CA"
 
 This poster is about...
 
-[Download paper here](http://dhellfeld.github.io/files/posters/20150714-inmm.pdf)
+[Download poster here](http://dhellfeld.github.io/files/posters/20150714-inmm.pdf)
