--- a/_posters/20161031-ieeenss.md
+++ b/_posters/20161031-ieeenss.md
@@ -10,4 +10,4 @@ location: "Strasbourg, France"
 
 This poster is about...
 
-[Download paper here](http://dhellfeld.github.io/files/posters/20161031-ieeenss.pdf)
+[Download poster here](http://dhellfeld.github.io/files/posters/20161031-ieeenss.pdf)
