--- a/_posters/20170911-nssc.md
+++ b/_posters/20170911-nssc.md
@@ -10,4 +10,4 @@ location: "Berkeley, CA"
 
 This poster is about...
 
-[Download paper here](http://dhellfeld.github.io/files/posters/20170911-nssc.pdf)
+[Download poster here](http://dhellfeld.github.io/files/posters/20170911-nssc.pdf)
