--- a/_posters/20181112-ieeenss.md
+++ b/_posters/20181112-ieeenss.md
@@ -10,4 +10,4 @@ location: "Sydney, Australia"
 
 This poster is about...
 
-[Download paper here](http://dhellfeld.github.io/files/posters/20181112-ieeenss.pdf)
+[Download poster here](http://dhellfeld.github.io/files/posters/20181112-ieeenss.pdf)
