--- a/_posters/20180614-sorma.md
+++ b/_posters/20180614-sorma.md
@@ -10,4 +10,4 @@ location: "Ann Arbor, MI"
 
 This poster is about...
 
-[Download paper here](http://dhellfeld.github.io/files/posters/20180614-sorma.pdf)
+[Download poster here](http://dhellfeld.github.io/files/posters/20180614-sorma.pdf)
