--- a/_posters/20150714-inmm.md
+++ b/_posters/20150714-inmm.md
@@ -2,12 +2,12 @@
 title: "Nuclear Reactor Antineutrino Directionality via Elastic Electron Scattering in a Gd-Doped Water Cherenkov Detector"
 collection: posters
 type: "Poster"
-permalink: /posters/201507-inmm
+permalink: /posters/20150714-inmm
 venue: "INMM Annual Meeting"
 date: 2015-07-14
 location: "Indian Wells, CA"
 ---
 
-This poster is about...
+<!-- This paper is about ... -->
 
 [Download poster here](http://dhellfeld.github.io/files/posters/20150714-inmm.pdf)
