--- a/_posters/20181112-ieeenss.md
+++ b/_posters/20181112-ieeenss.md
@@ -2,12 +2,12 @@
 title: "Additive Point Source Localization"
 collection: posters
 type: "Poster"
-permalink: /posters/201811-ieeenss
+permalink: /posters/20181112-ieeenss
 venue: "IEEE NSS-MIC"
 date: 2018-11-12
 location: "Sydney, Australia"
 ---
 
-This poster is about...
+<!-- This paper is about ... -->
 
 [Download poster here](http://dhellfeld.github.io/files/posters/20181112-ieeenss.pdf)
