--- a/_talks/20190430-lbnl.md
+++ b/_talks/20190430-lbnl.md
@@ -2,12 +2,12 @@
 title: "Gamma-ray Point-source Localization and Sparse Image Reconstruction using Poisson Likelihood"
 collection: talks
 type: "Talk"
-permalink: /talks/201904-lbnl
+permalink: /talks/20190430-lbnl
 venue: "LBNL NSD Staff Meeting"
 date: 2019-04-30
 location: "Berkeley, CA"
 ---
 
-This talk is about...
+<!-- This paper is about ... -->
 
-[Download talk here](http://dhellfeld.github.io/files/talks/20190430-lbnl.pdf)
+<!-- [Download talk here](http://dhellfeld.github.io/files/talks/20190430-lbnl.pdf) -->
