--- a/_posters/20161031-ieeenss.md
+++ b/_posters/20161031-ieeenss.md
@@ -2,12 +2,12 @@
 title: "Directional Reconstruction of Reactor Antineutrinos via Electron Scattering in Gd-doped Water Cherenkov Detectors"
 collection: posters
 type: "Poster"
-permalink: /posters/201611-ieeenss
+permalink: /posters/20161031-ieeenss
 venue: "IEEE NSS-MIC"
 date: 2016-10-31
 location: "Strasbourg, France"
 ---
 
-This poster is about...
+<!-- This paper is about ... -->
 
 [Download poster here](http://dhellfeld.github.io/files/posters/20161031-ieeenss.pdf)
