--- a/_posters/20170911-nssc.md
+++ b/_posters/20170911-nssc.md
@@ -2,12 +2,12 @@
 title: "3D Gamma-ray Imaging and Scene Data Fusion"
 collection: posters
 type: "Poster"
-permalink: /posters/201709-nssc
+permalink: /posters/20170911-nssc
 venue: "NSSC Program Review"
 date: 2017-09-11
 location: "Berkeley, CA"
 ---
 
-This poster is about...
+<!-- This paper is about ... -->
 
 [Download poster here](http://dhellfeld.github.io/files/posters/20170911-nssc.pdf)
