--- a/_posters/20180614-sorma.md
+++ b/_posters/20180614-sorma.md
@@ -2,12 +2,12 @@
 title: "Near-field 3D Spherical Active Coded Aperture Gamma-ray Imaging"
 collection: posters
 type: "Poster"
-permalink: /posters/201806-sorma
+permalink: /posters/20180614-sorma
 venue: "SORMA"
 date: 2018-06-14
 location: "Ann Arbor, MI"
 ---
 
-This poster is about...
+<!-- This paper is about ... -->
 
 [Download poster here](http://dhellfeld.github.io/files/posters/20180614-sorma.pdf)
