--- a/_talks/20161102-ieeenss.md
+++ b/_talks/20161102-ieeenss.md
@@ -2,12 +2,12 @@
 title: "Optimization of a Spherical Active Coded Mask Imager"
 collection: talks
 type: "Talk"
-permalink: /talks/201611-ieeenss
+permalink: /talks/20161102-ieeenss
 venue: "IEEE NSS-MIC"
 date: 2016-11-02
 location: "Strasbourg, France"
 ---
 
-This talk is about...
+<!-- This paper is about ... -->
 
 [Download talk here](http://dhellfeld.github.io/files/talks/20161102-ieeenss.pdf)
