--- a/_talks/20171024-ieeenss.md
+++ b/_talks/20171024-ieeenss.md
@@ -2,12 +2,12 @@
 title: "Omnidirectional 3D Gamma-ray Imaging with a Free-moving Spherical Active Coded Aperture"
 collection: talks
 type: "Talk"
-permalink: /talks/201710-ieeenss
+permalink: /talks/20171024-ieeenss
 venue: "IEEE NSS-MIC"
 date: 2017-10-24
 location: "Atlanta, GA"
 ---
 
-This talk is about...
+<!-- This paper is about ... -->
 
 [Download talk here](http://dhellfeld.github.io/files/talks/20171024-ieeenss.pdf)
