--- a/_talks/20181115-ieeenss.md
+++ b/_talks/20181115-ieeenss.md
@@ -2,12 +2,12 @@
 title: "Real-time Free-moving Volumetric Coded Aperture Gamma-ray Imaging in PRISM"
 collection: talks
 type: "Talk"
-permalink: /talks/201811-ieeenss
+permalink: /talks/20181115-ieeenss
 venue: "IEEE NSS-MIC"
 date: 2018-11-15
 location: "Sydney, Australia"
 ---
 
-This talk is about...
+<!-- This paper is about ... -->
 
 [Download talk here](http://dhellfeld.github.io/files/talks/20181115-ieeenss.pdf)
