--- a/_talks/20190430-lbnl.md
+++ b/_talks/20190430-lbnl.md
@@ -10,4 +10,4 @@ location: "Berkeley, CA"
 
 <!-- This paper is about ... -->
 
-<!-- [Download talk here](http://dhellfeld.github.io/files/talks/20190430-lbnl.pdf) -->
+[Download talk here](http://dhellfeld.github.io/files/talks/20190430-lbnl.pdf)
